--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
-  "name": "financial-edu-app",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "dependencies": {
-    "bootstrap": "4.5.2",
-    "handlebars": "^4.7.6",
-    "jquery": "^3.5.1",
-    "less-watch-compiler": "^1.14.6",
-    "popper.js": "^1.16.1"
-  }
+	"name": "financial-edu-app",
+	"version": "1.0.0",
+	"main": "index.js",
+	"license": "MIT",
+	"dependencies": {
+		"bootstrap": "4.5.2",
+		"handlebars": "^4.7.6",
+		"jquery": "^3.5.1",
+		"less-watch-compiler": "^1.14.6",
+		"popper.js": "^1.16.1"
+	},
+	"repository": "https://github.com/ruthas/financial-edu-app.git",
+	"author": "Ruth <ruths@indiefin.com>",
+	"contributors": [
+		"Zolani <zolaniv@indiefin.com>"
+	]
 }
